hyper-operator/test_case/service_echo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-backend
  namespace: default
  labels:
    app: echo-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-backend
  template:
    metadata:
      labels:
        app: echo-backend
    spec:
      containers:
        - name: echo
          image: ealen/echo-server:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: default
spec:
  selector:
    app: echo-backend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
