hyper-operator/test_case/http_route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gateway-echo-route
  namespace: default
spec:
  parentRefs:
    - name: hyper-gateway
      namespace: hyper-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      # filters:
      #   - type: ExternalAuth
      #     externalAuth:
      #       protocol: GRPC
      #       grpc: {}
      #       backendRef:
      #         group: ""
      #         kind: Service
      #         name: hyper-engine-svc
      #         namespace: hyper-system
      #         port: 9001
      backendRefs:
        - name: backend-service
          port: 80
